crates/uitest/fixtures/ty_check/const_hole_storage_map_default.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/const_hole_storage_map_default.fe
---
error[3-0032]: layout hole `_` is not allowed in value position
  ┌─ const_hole_storage_map_default.fe:9:11
  │
9 │ fn bad(x: StorageMap<Address, u256>) {}
  │           ^^^^^^^^^^^^^^^^^^^^^^^^^ this type contains `_`, which is only allowed in contract fields and `uses (...)` parameter types
  │
  = replace `_` with an explicit const argument in value positions
